# ipc-message-queues

./: .gitignore  CMakeLists.txt  README.md  parser.ih
presentation/: CMakeLists.txt  constants.hpp  start.sh
presentation/one_producer_more_consumers/: CMakeLists.txt  consumer.cpp  consumer_one.cpp  consumer_three.cpp  consumer_two.cpp  producer.cpp
presentation/one_producer_one_consumer/: CMakeLists.txt  consumer.cpp  producer.cpp
presentation/two_producers_two_consumers_massive/: CMakeLists.txt  consumer_one.cpp  consumer_two.cpp  producer_one.cpp  producer_two.cpp  server.cpp
resources/: lexer  parser
src/: CMakeLists.txt  CastFuns.hpp  Element.cpp  Element.hpp  HelperFuns.hpp  LindaClient.hpp  Message.cpp  Message.hpp  PendingQueries.cpp  PendingQueries.hpp  Queue.cpp  Queue.hpp  Server.cpp  Server.hpp  ServerSink.cpp  ServerSink.hpp  Tuple.cpp  Tuple.hpp  TupleMap.cpp  TupleMap.hpp  client.cpp  main.cpp  server_service.cpp
src/parser/: CMakeLists.txt  Parser.cpp  Parser.h  Parser.ih  Parserbase.h  Scanner.cpp  Scanner.h  Scanner.ih  Scannerbase.h  lex  lex.cc  parse.cc  parser  parser.txt
test/: CMakeLists.txt  parser_test.cpp  test.cpp  test_element.cpp  test_linda_client.cpp  test_parser.cpp  test_server.cpp  test_server_sink.cpp  test_tuple.cpp  test_tuple_map.cpp
